hphp/test/slow/unserialize-invalid-dynamic-prop-name/fast-private-empty.php.expectf
Fatal error: Cannot access empty property in %s/fast-private-empty.php on line 7
